# rock-paper-scissors

./: README.md  pyproject.toml
documentation/: implementation.md  specification.md  testing.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md  weekly_report_7.md
src/: demo.py  rps.py
src/logic/: ai.py  game.py  trie.py
src/tests/: ai_test.py  game_test.py  trie_test.py
src/ui/: cli.py
