[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["oskera <oskari.e.keranen@gmail.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissors"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
